V1 Multi-Character and world system